# wetch

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  setup.py
.github/: FUNDING.yml
blog/: promotional-article.html
demos/: demo-article.md
docs/: index.html
src/wetch/: __init__.py  cli.py
