[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "wetch"
version = "1.0.0"
description = "WeChat Article Formatter – Convert markdown to WeChat-ready HTML with smart formatting, cover generation & multiple themes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["wechat", "公众号", "markdown", "formatter"]
authors = [
    {name = "wetch contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markdown",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System",
]

[project.urls]
Homepage = "https://github.com/kai-chen/wetch"
Source = "https://github.com/kai-chen/wetch"

[project.scripts]
wetch = "wetch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]